Use standard size and fix alignment of generic reference icon
Using standard size of 20px for reference icon. This also brings
the icon into the right alignment to the text.

Bug: T221555

--- a/src/ui/templates/popup/popup.less
+++ b/src/ui/templates/popup/popup.less
@@ -30,11 +30,13 @@
 
 	.mw-ui-icon {
 		// mw-ui-icon assumes a font size of 16px so we must declare it here
+		// FIXME: This should be in `em` for user scalability and skin specific or with overrides.
 		font-size: 16px;
 
 		&:before {
 			// Use fixed size to prevent icon blur.
 			background-size: 20px;
+			min-height: 20px;
 		}
 	}
 
